syntax = "proto3";
package orc;
option go_package = "./../orc";

enum Protocol {
    NONE_PROTOCOL = 0;
    MOVE_JOG_REQ = 1;
    ENTER_PLAYER_NOTI = 2;
    WELCOME_PLAYER_NOTI = 3;
    LEAVE_OBJEC_NOTI = 4;
    MOVE_OBJECT_NOTI = 5;
    ENTER_PROJECTILE_NOTI = 6;
    PROJECTILE_ATTACK_NOTI = 7;
    SHOOT_PROJECTILE_REQ = 8;
    ATTACK_REQ = 9;
}

enum Direction {
    NONE_DIR = 0;
    NORTH = 1;
    NORTH_EAST = 2;
    EAST = 3;
    EAST_SOUTH = 4;
    SOUTH = 5;
    SOUTH_WEST = 6;
    WEST = 7;
    WEST_NORTH = 8;
}

message PlayerMessage {
    int64 id = 1;
    double x = 2;
    double y = 3;
    Direction dir = 4;
}

message ProjectileMessage {
    int64 id = 1;
    double x = 2;
    double y = 3;
    int32 angle = 4;
}

message MoveJogReqMessage {
    Direction dir = 1;
}

message EnterPlayerNotiMessage {
    PlayerMessage player = 1;
}

message EnterProjectileNotiMessage {
    ProjectileMessage projectile = 1;
}

message WelcomePlayerNotiMessage {
    int64 my_id = 1;
    repeated PlayerMessage players = 2;
}

message LeaveObjectNotiMessage {
    int64 id = 1;
}

message MoveObjectNotiMessage {
    message Object {
        int64 id = 1;
        double x = 2;
        double y = 3;
        Direction dir = 4;
    }
    
    repeated Object objects = 1;
}

message ProjectileAttackNotiMessage {
    int64 player_id = 1;
    int64 projectile_id = 2;
}

message ShootProjectileReqMessage {
    int32 angle = 1;
}

message AttackReqMessage {
    
}


